--- a/Lore-Fronton-React-Recoil/ClientApp/src/custom.css
+++ b/Lore-Fronton-React-Recoil/ClientApp/src/custom.css
@@ -1,4 +1,7 @@
 /* Provide sufficient contrast against white background */
+body{
+  background-color: rgba(70, 77, 77, 0.712);
+}
 a {
   color: #0366d6;
 }
